Closed
Bug 1860906
Opened 1 year ago
Closed 1 year ago
Serialize CodeRangeUnwindInfos
Categories
(Core :: JavaScript: WebAssembly, defect, P2)
Core
JavaScript: WebAssembly
Tracking
()
RESOLVED
FIXED
121 Branch
Tracking | Status | |
---|---|---|
firefox121 | --- | fixed |
People
(Reporter: rhunt, Assigned: yury)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
It looks like we don't serialize this and this could lead to crashes under the profiler.
Yury, can you take a look?
Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(ydelendik)
Assignee | ||
Comment 1•1 year ago
|
||
Pushed by ydelendik@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1b85622a0212
Serialize CodeRangeUnwindInfos. r=rhunt
Comment 3•1 year ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 1 year ago
status-firefox121:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 121 Branch
Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(ydelendik)
You need to log in
before you can comment on or make changes to this bug.
Description
•