Bug 1860906 - Serialize CodeRangeUnwindInfos. r=rhunt

Differential Revision: https://phabricator.services.mozilla.com/D191888